# BMSTU_Compilers_Coursework

./: .gitmodules  CMakeLists.txt  README.md
doc/: grammar.bnf  grammar.md
plugins/basic-plugin/: build.gradle.kts  settings.gradle.kts
plugins/basic-plugin/src/main/java/org/intellij/sdk/language/: Basic.bnf  Basic.flex  BasicColorSettingsPage.java  BasicFileType.java  BasicIcons.java  BasicLanguage.java  BasicLexerAdapter.java  BasicParserDefinition.java  BasicSyntaxHighlighter.java  BasicSyntaxHighlighterFactory.java
plugins/basic-plugin/src/main/java/org/intellij/sdk/language/psi/: BasicElementType.java  BasicFile.java  BasicTokenSets.java  BasicTokenType.java
scripts/: install.sh
src/: CMakeLists.txt  ast.py  errors.py  global_constructor.py  grammar.py  main.py  parser_edsl.py  requirements.txt  std_library.py  symbol_table.py
src/codegen/: basic_to_hir_mappings.py  global_constructor.py  hir_to_llvm_mappings.py
src/codegen/transform/: hir_transform.py  llvm_ir_transform.py
src/formatter/: ast_formatter.py  hir_formatter.py  llvm_formatter.py  tree.py
src/hir/: builder.py  hir_instructions.py  hir_types.py  instructions.py  module.py  types.py  utils.py  values.py
src/libs/: parser_edsl.py
src/optimizer/analyzers/: cfgnode.py  domtree.py  ssa.py
src/optimizer/transforms/: __init__.py  constant_folding.py  dce.py  gvn.py  scp.py  simplifycfg.py  simplifycfg.test.py  sroa.py  sroa.test.py
src/parser/: basic_ast.py  basic_ast_generator.py  basic_grammar.py  basic_types.py  errors.py  symbol_table.py
src/parser/analyzers/: ast_dfs.py  is_breakable.py  is_const_expr.py  symbol_factory.py  symbol_table.py
src/parser/experimental/: basic_types.py  types.py
src/parser/transforms/: semantic_relax_transform.py
src/preprocessor/: directives.py  errors.py  file_table.py  grammar.bnf  grammar.py  preprocessor.py
src/preprocessor/analyzers/: contains_directives.py
src/preprocessor/transforms/: include_transform.py  semantic_relax_transform.py
src/std_library/: CMakeLists.txt  main.cpp  std_library.py
std-library/: CMakeLists.txt  main.cpp  std.basic
tests/: bug1.basic  bug1.ll  const_prop.basic  ctor.basic  gvn.basic  len.basic  lookup_bug.basic  matix.basic  new_program.basic  new_program.ll  pp_test.basic  preprocessed.basic  preprocessor_test.basic  scp.basic  sort.basic  ssa_example.basic  string.basic  test.basic  test.ll  trivials.basic
tests/problems/: global-constants.c  scp
tests/report/: cle.basic  mt-mult-results  report-decl.basic  report-decl.ll  report-string-concat.basic  report-string-concat.ll  report-var-decl.basic  report-var-decl.ll  report.basic  report.ll  report1.basic  report1.ll  report2.basic  report2.ll  report3.basic  report3.ll  report4.basic  report4.ll  sort-opt.ll  sort-results  sort.ll  trivials.basic
